@@ -7,7 +7,7 @@
   for example, running the `migrate` command and passing it `force` can be done using one of the following ways:
 
     clojure -M:run migrate force
-    java -jar metabase.jar migrate force
+    java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar migrate force
 
   Logic below translates resolves the command itself to a function marked with `^:command` metadata and calls the
   function with arguments as appropriate.
@@ -194,7 +194,8 @@
 
 (defn ^:command ^:requires-init import
   {:doc "Load serialized Metabase instance as created by the [[export]] command from directory `path`."
-   :arg-spec [["-e" "--continue-on-error" "Do not break execution on errors."]]}
+   :arg-spec [["-e" "--continue-on-error" "Do not break execution on errors."]
+              [""   "--full-stacktrace"   "Output full stacktraces on errors."]]}
   [path & options]
   (call-enterprise 'metabase-enterprise.serialization.cmd/v2-load! path (get-parsed-options #'import options)))
 
@@ -213,20 +214,22 @@
   (call-enterprise 'metabase-enterprise.serialization.cmd/v1-dump! path (get-parsed-options #'dump options)))
 
 (defn ^:command export
-  {:doc "Serialize Metabase instance into directory at `path`."
-   :arg-spec [["-c" "--collection ID"            "Export only specified ID(s). Use commas to separate multiple IDs. You can pass entity ids with `eid:<...>` as a prefix."
+  {:doc      "Serialize Metabase instance into directory at `path`."
+   :arg-spec [["-c" "--collection ID"            "Export only specified ID(s). Use commas to separate multiple IDs. Pass either PKs or entity IDs."
                :id        :collection-ids
                :parse-fn  (fn [raw-string] (->> (str/split raw-string #"\s*,\s*")
                                                 (map (fn [v]
-                                                       (if (str/starts-with? v "eid:")
-                                                         v
-                                                         (parse-long v))))))]
+                                                       (cond
+                                                         (str/starts-with? v "eid:") v
+                                                         (= (count v) 21)            v
+                                                         :else                       (parse-long v))))))]
               ["-C" "--no-collections"           "Do not export any content in collections."]
               ["-S" "--no-settings"              "Do not export settings.yaml"]
               ["-D" "--no-data-model"            "Do not export any data model entities; useful for subsequent exports."]
               ["-f" "--include-field-values"     "Include field values along with field metadata."]
               ["-s" "--include-database-secrets" "Include database connection details (in plain text; use caution)."]
-              ["-e" "--continue-on-error"        "Do not break execution on errors."]]}
+              ["-e" "--continue-on-error"        "Do not break execution on errors."]
+              [""   "--full-stacktrace"          "Output full stacktraces on errors."]]}
   [path & options]
   (call-enterprise 'metabase-enterprise.serialization.cmd/v2-dump! path (get-parsed-options #'export options)))
 
@@ -319,6 +322,8 @@
         (init-fn))
       (apply @(cmd->var command-name) args)
       (catch Throwable e
+        (when (:cmd/exit (ex-data e)) ;; fast-track for commands that have their own error handling
+          (System/exit 1))
         (.printStackTrace e)
         (fail! (str "Command failed with exception: " (.getMessage e))))))
   (System/exit 0))
